--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "React webpack starter template",
   "main": "lib/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@blueprintjs/core": "^3.5.1",
+    "@material-ui/core": "^3.0.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "react-awesome-button": "^5.0.0",
+    "react-native": "^0.56.0",
+    "react-native-view": "^1.1.0",
+    "react-webcam": "^1.0.1"
+  },
   "author": {
     "name": "Krasimir Tsonev",
     "email": "info@krasimirtsonev.com",
@@ -26,6 +34,7 @@
     "test:ci": "watch 'npm run test' src/"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "babel": "6.5.2",
     "babel-core": "6.6.5",
     "babel-eslint": "7.2.1",
@@ -37,6 +46,8 @@
     "eslint": "3.19.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-react": "6.10.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^2.0.0",
     "karma": "0.13.19",
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.6.0",
@@ -51,9 +62,9 @@
     "karma-webpack": "1.7.0",
     "mocha": "2.3.4",
     "phantomjs": "1.9.19",
-    "react": "15.2.0",
-    "react-addons-test-utils": "15.2.0",
-    "react-dom": "15.2.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "url-loader": "^1.1.1",
     "watch": "0.16.0",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.11.0"
