--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@blueprintjs/core": "^3.5.1",
     "@material-ui/core": "^3.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "image-to-base64": "^1.3.5",
     "react-awesome-button": "^5.0.0",
     "react-native": "^0.56.0",
     "react-native-view": "^1.1.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "axios": "^0.18.0",
     "babel": "6.5.2",
     "babel-core": "6.6.5",
     "babel-eslint": "7.2.1",
