--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-preset-react": "6.5.0",
     "chai": "3.3.0",
     "core-js": "1.1.4",
+    "css-loader": "^1.0.0",
     "eslint": "3.19.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-react": "6.10.3",
@@ -66,6 +67,7 @@
     "phantomjs": "1.9.19",
     "react": "15.5.4",
     "react-dom": "15.5.4",
+    "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "watch": "0.16.0",
     "webpack": "1.12.2",
